# easy-rag

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/_static/: .gitkeep  README.md  custom.css  custom.js
docs/_templates/: README.md  footer.html  sidebar.html
src/: __init__.py  config.py  main.py
src/easyrag/: config.py  main.py
src/easyrag/models/: schemas.py
src/easyrag/routers/: documents.py  health.py
src/easyrag/services/: document_processor.py  vectorstore_service.py
src/models/: __init__.py  schemas.py
src/routers/: documents.py  health.py
src/services/: document_processor.py  vectorstore_service.py
